--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+        <meta content='width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' name='viewport' />
+<meta name="viewport" content="width=device-width" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -26,6 +28,7 @@
   <body>
 
     <script src="sketch.js"></script>
+      overflow-x:hidden
       <div class="smartphone">
   <div class="content">
     <iframe src="/w3css/tryw3css_templates_band.htm" style="width:100%;border:none;height:100%" />
